# sc-family-intelligence-platform

./: .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  docker-compose.yml  main.py  pyproject.toml
configs/: sources.yml
ops/postgres/: init-postgis.sql  spatial_health_check.sql
ops/trino/: jvm.config  node.properties
scripts/: check_cbs_crime_source.py
sql/: dbt_project.yml  pyproject.toml
sql/macros/: generate_schema_name.sql
sql/seeds/: bag_geo_region_mapping.csv
sql/tests/: stg_bag_adressen_spatial_isvalid.sql  stg_bag_adressen_spatial_srid.sql  stg_bag_gpkg_verblijfsobject_spatial_isvalid.sql  stg_bag_gpkg_verblijfsobject_spatial_srid.sql  stg_bag_pand_spatial_isvalid.sql  stg_bag_pand_spatial_srid.sql  stg_region_geom_isvalid.sql  stg_region_geom_municipality_only.sql  stg_region_geom_region_id_in_dim_region.sql  stg_region_geom_srid.sql
src/fip/: __init__.py  cli.py  settings.py
tests/: helpers.py
tests/integration/: test_bag_adres_roundtrip.py  test_bronze_to_silver_roundtrip.py  test_spatial_validations.py
tests/unit/: test_bag_adressen_mapping.py  test_bag_adressen_silver.py  test_bag_factory.py  test_bag_gpkg_landing_writer.py  test_bag_gpkg_layers.py  test_bag_gpkg_verblijfsobject_silver.py  test_bag_landing_writer.py  test_bag_pand_silver.py  test_bag_verblijfsobject_silver.py  test_cbs_adapter.py  test_cbs_crime_adapter.py  test_cbs_crime_command.py  test_cbs_crime_silver_observations.py  test_cbs_crime_silver_service.py  test_cbs_crime_silver_sink.py  test_cbs_factory.py  test_cbs_observations_silver.py  test_check_cbs_crime_source.py  test_cli.py  test_dedupe_helpers.py  test_duckdb_readback.py  test_gis_command.py  test_gold_writer.py  test_iceberg_sink.py  test_ingestion_service.py  test_locatieserver_client.py  test_locatieserver_mapping.py  test_onderwijsinspectie_adapter.py  test_package.py  test_pdok_bag_adapter.py  (+11 more)
(+187 files in other folders)
