[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fip"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/README.md", "/pyproject.toml", "/Taskfile.yml"]

[project]
name = "family-intelligence-platform"
version = "0.1.3"
description = "Personal region and housing intelligence platform for family-oriented location decisions."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.2",
    "httpx>=0.28.1",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "pyiceberg[s3fs,pyarrow]>=0.11.0",
    "tenacity>=9.1.4",
    "typer>=0.24.1",
]

[project.scripts]
fip = "fip.cli:main"

[dependency-groups]
dev = [
    "bump-my-version>=1.2.4",
    "mypy>=1.20.1",
    "pre-commit>=4.3.0",
    "pytest>=9.0.3",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.11",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
files = ["src"]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
pretty = true

[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.*"]
ignore_missing_imports = true

[tool.bumpversion]
current_version = "0.1.3"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} -> {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} -> {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
